--- a/Css/style.css
+++ b/Css/style.css
@@ -389,6 +389,10 @@ button a {
     color: #6b6b6b;
 }
 
+.fonc-card-icon:hover {
+    color: #9356DC;
+}
+
 .fonc-card-icon i.fa.fa-mobile {
     margin: 10px;
     color: #6b6b6b;
