--- a/Css/style.css
+++ b/Css/style.css
@@ -29,6 +29,7 @@ i {
 }
 
 .acceuil {
+    display: grid;
     height: 100%;
     width: 100%;
 }
@@ -184,20 +185,14 @@ header div {
 }
 
 header {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    place-items: center;
 }
 
-.header-logo {
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    width: 200px;
-}
 
-header img {
-    margin: 10px;
-    width: 200px;
+.header-text {
+    font-family: Shrikhand, "cursive";
+    font-size: 38px;
 }
 
 nav {
@@ -242,9 +237,10 @@ nav {
 
 #recherche-section {
     width: 100%;
-    display: flex;
+    display: grid;
     flex-direction: column;
     background-color: #f6f6f6;
+    place-items: center;
 }
 
 .rech-section-down {
