--- a/Css/menu.css
+++ b/Css/menu.css
@@ -14,6 +14,7 @@ html {
 h1 {
     font-family: Shrikhand, "cursive";
 }
+
 a {
     text-decoration: none;
     color: black;
@@ -92,6 +93,10 @@ a {
     z-index: 1;
     position: relative;
     padding: 20px 0px 0px 0px;
+}
+
+.main-section {
+    padding: 5px;
 }
 
 .main-header {
@@ -694,14 +699,6 @@ baska
     font-size: 16px;
 }
 
-@media screen and (max-width: 767px) {
-
-    .menu {
-        margin: 10px 10px;
-        padding: 10px 10px;
-    }
-}
-
 
 @media screen and (min-width: 992px) {
 
@@ -713,6 +710,8 @@ baska
         margin: 10px 10px;
         padding: 10px 10px;
     }
+
+    
 }
     
 
