--- a/Css/style.css
+++ b/Css/style.css
@@ -134,7 +134,7 @@ i {
 }
 
 
-/*version mobile first*/
+
 @media screen and (min-width: 768px) and(max-width: 992px) {
 
     .fonc-cards {
@@ -171,7 +171,7 @@ i {
     } 
 }
 
-/*header*/
+
 header div {
     justify-content: space-between;
     padding: 0px 10px;
@@ -195,7 +195,7 @@ header {
     font-size: 38px;
 }
 
-nav {
+#nav {
     background-color: #eaeaea;
     width: 100%;
     text-align: center;
